--- a/tiprogra3/src/components/VerMasGrid/VerMas.css
+++ b/tiprogra3/src/components/VerMasGrid/VerMas.css
@@ -1,23 +1,33 @@
 .movie-grid-container {
-    padding: 20px;
+    
     background-color: #1c1c1c;
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-wrap: wrap; 
   }
   
   .movie-row {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0;
-    padding: 0;
-  }
-  
+    margin-left: 15%;
+    margin-right: 15%;
 
-  .movie-item {
+    padding-left: 0;
+  }
+
+.button-vermas{
+    margin-left: 45%;
+    margin-bottom: 20px;
+    background-color: #e50914;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+  
+.movie-item {
+    margin-bottom: 20px;
     width: 30%;
-    background-color: #ee22;
     border-radius: 10px;
     overflow: hidden;
   }
-  
