--- a/tiprogra3/src/components/MovieCard/MovieCard.css
+++ b/tiprogra3/src/components/MovieCard/MovieCard.css
@@ -18,7 +18,7 @@
   
   .movie-img {
     width: 100%;
-    height: 300px;
+    height: 400px;
     border-radius: 5px;
   }
   
@@ -45,3 +45,16 @@
     text-align: center;
   }
   
+  .favoritosBoton {
+    background: transparent; /* Quita el fondo blanco */
+    border: none; /* Quita el borde */
+    cursor: pointer; /* Cambia el cursor al pasar por encima */
+    display: flex; /* Permite centrar el contenido */
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    padding: 0; /* Elimina el padding */
+  }
+  .favoritos-container {
+    margin-top: 10px; /* Espaciado superior para separación */
+    width: 100%; /* Asegúrate de que ocupe todo el ancho */
+  }
