--- a/tiprogra3/src/components/VerMasGrid/VerMas.css
+++ b/tiprogra3/src/components/VerMasGrid/VerMas.css
@@ -31,3 +31,27 @@
     border-radius: 10px;
     overflow: hidden;
   }
+
+  .btn-ver-mas {
+    max-width: 235px;
+    max-height: 18px;
+    background-color: #afafaf;
+    color: white;  
+    padding: 10px 20px;
+    border: none;   
+    font-size: 16px;          
+
+  }
+
+  .search-list {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
+  }
+
+  .search-result {
+    font-size: 18px;
+    color: #acacac;
+  }
